<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".StartActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="171dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/eat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="233dp"
        android:text="@string/texview_startactivity"
        android:textColor="#2e2e28"
        android:textSize="18sp" />

    <AutoCompleteTextView
        android:id="@+id/autoUniversity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-233dp"
        android:completionThreshold="1"
        android:hint="@string/hint_autoComplexTextView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/autoUniversity"
        android:layout_centerHorizontal="true"
        android:onClick="findRestaurants"
        android:text="@string/button_find"
        android:textAllCaps="false" />


</RelativeLayout>