<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantsDetailsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/saved"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/imageView_save"
                    style="@style/textView" />
            </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/favorite1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/imageView_favorite"
                        style="@style/textView" />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/comment48px"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="Bình luận"
                        style="@style/textView"
                         />
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/share48px"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="Chia sẻ"
                        style="@style/textView" />
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/imgRestaurantsDetail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:src="@drawable/tocotoco" />

            <TextView
                android:id="@+id/txtTitleDetails"
                style="@style/textView"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:text="TocoToco"
                android:textColor="#fa2f301f"
                android:textSize="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#21210c"
                android:text="@string/nav_account" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/comment" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/imageView_comment" />

                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/photo" />

                    <TextView
                        style="@style/textView"
                        android:text="@string/imageView_image" />
                </LinearLayout>



                <LinearLayout
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/favorite" />

                    <TextView
                        style="@style/textView"
                        android:text="@string/imageView_like" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#21210c"
                android:text="@string/nav_account" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textView"
                        android:layout_marginTop="5dp"
                        android:text="Đóng mở cửa"
                        android:textColor="#53a44b"
                        android:textSize="17dp" />

                    <TextView
                        android:id="@+id/txtOpenAndClose"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="textView"
                        android:textColor="#26250e"
                        android:textSize="17dp" />
                </LinearLayout>

                <Button
                    android:layout_marginRight="20dp"
                    android:text="Gọi ngay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#21210c"
                android:text="@string/nav_account" />
            <TextView
                android:id="@+id/txtAddresDetails"
                android:textSize="17dp"
                android:text="Address"
                style="@style/textView" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>